--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
+  "homepage": "https://ferdianqbl.github.io/my-portfolio-competition",
   "name": "my-portfolio-competition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stahl.luke/react-reveal": "^1.2.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/react": "^3.1.1"
   }
 }
